@@ -2,7 +2,7 @@ require 'vlad'
 
 module Vlad
   module Unicorn
-    VERSION = '2.1.0' #:nodoc:
+    VERSION = '2.1.1' #:nodoc:
 
     # Runs +cmd+ using sudo if the +:unicorn_use_sudo+ variable is set.
     def self.maybe_sudo(cmd)
@@ -33,13 +33,14 @@ end
 
 namespace :vlad do
   set :unicorn_command,     "unicorn"
-  set(:unicorn_config)      { "#{current_path}/config/unicorn.rb" }
+  set :unicorn_config,      "config/unicorn.rb"
   set :unicorn_use_sudo,    false
   set(:unicorn_pid)         { "#{shared_path}/pids/unicorn.pid" }
-  set :unicorn_env, rails_env || "development"
+  set(:unicorn_env)   { rails_env || "development" }
 
   def unicorn(opts = '')
-    cmd = "#{unicorn_command} -D -E #{unicorn_env} --config-file #{unicorn_config}"
+    cmd = "cd #{current_path};"
+    cmd << " #{unicorn_command} -D -E #{unicorn_env} --config-file #{unicorn_config}"
     cmd << " #{opts}"
     cmd
   end
