@@ -1,8 +1,10 @@
 # -*- encoding: utf-8 -*-
+$:.push File.expand_path("../lib", __FILE__)
+require "vlad/unicorn_common"
 
 Gem::Specification.new do |s|
   s.name        = "vlad-unicorn"
-  s.version     = "2.0.1"
+  s.version     = Vlad::Unicorn::VERSION
   s.authors     = ["Kevin R. Bullock", "Oleksandr Ulianytskyi"]
   s.email       = ["kbullock@ringworld.org", "a.ulyanitsky@gmail.com"]
   s.homepage    = "http://bitbucket.org/krbullock/vlad-unicorn/"
